syntax = "proto3";
package jim380.re.fix;

option go_package = "github.com/jim380/Re/x/fix/types";

import "re/fix/standard_message.proto";

message SessionReject {
  string sessionID = 1; // A string that identifies the session to which the rejected message belongs.
  Header header = 2; // A FIX protocol header containing standard message fields such as beginString, bodyLength, msgType, etc
  string text = 3; // A free-form text field that provides information about the rejection, such as the reason for the rejection or a description of the error
  Trailer trailer = 4; // A FIX protocol trailer containing standard message fields such as checkSum
  string acceptorAddress = 5; // address of the user that rejects a session
}
